asg/tests/pass/import/names.leo
import a0-f.foo;
import a-9.bar;
import hello-world.hello;

function main() {}