asg/tests/fail/core/core_package_invalid.leo
import core.bad_circuit; // `bad_circuit` is not a core package

function main() {}
